--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ version = "0.22.1"
 version = "0.3.1"
 
 [dependencies.miette]
-version = "7.4.0"
+version = "7.5.0"
 
 [dependencies.rand]
-version = "0.8.5"
+version = "0.9.0"
 
 [dependencies.serde]
 version = "1.0.217"
@@ -33,3 +33,6 @@ version = "0.10.8"
 
 [dependencies.thiserror]
 version = "2.0.11"
+
+[features]
+default = ["serde"]
