--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,8 @@ version = "2.0.11"
 
 [features]
 default = ["serde"]
+serde = ["dep:serde"]
+
+[package.metadata.docs.rs]
+features = ["serde"]
+rustdoc-args = ["--cfg", "docsrs"]
